Added colors for number-cards

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#394166</color>
     <color name="colorPrimaryDark">#2a3350</color>
     <color name="colorAccent">#54ebfe</color>
+    <color name="colorAccentAlternate">#2f98ee</color>
+    <color name="colorOutline">#7c94c0</color>
 </resources>
