--- a/app/src/main/res/drawable/card_highlighted.xml
+++ b/app/src/main/res/drawable/card_highlighted.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- The card's shape stroke to give a border to the card-->
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorOutline" />
@@ -7,6 +8,7 @@
         </shape>
     </item>
 
+    <!-- The card's fill when highlighted -->
     <item
         android:left="5dp"
         android:right="5dp"
