Added color resource for text view background

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#54ebfe</color>
     <color name="colorAccentAlternate">#2f98ee</color>
     <color name="colorOutline">#7c94c0</color>
+    <color name="colorTextViewBG">#536f9f</color>
 </resources>
