--- a/app/src/main/res/drawable/card_highlighted.xml
+++ b/app/src/main/res/drawable/card_highlighted.xml
@@ -9,18 +9,14 @@
     </item>
 
     <!-- The card's fill when highlighted -->
-    <item
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp"
-        android:bottom="5dp">
+    <item>
         <shape android:shape="rectangle">
             <gradient
                 android:angle="270"
                 android:startColor="@color/colorAccent"
                 android:endColor="@color/colorAccentAlternate"
                 android:type="linear" />
-            <corners android:radius="10dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 </layer-list>
