--- a/app/src/main/res/drawable/card_normal.xml
+++ b/app/src/main/res/drawable/card_normal.xml
@@ -9,14 +9,10 @@
     </item>
 
     <!-- The card's normal fill -->
-    <item
-        android:bottom="3dp"
-        android:left="3dp"
-        android:right="3dp"
-        android:top="3dp">
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimary" />
-            <corners android:radius="10dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 </layer-list>
