Added color for inactive text view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccentAlternate">#2f98ee</color>
     <color name="colorOutline">#7c94c0</color>
     <color name="colorTextViewBG">#536f9f</color>
+    <color name="colorInactive">#7ab94141</color>
 </resources>
